Fix spacing in recipe display

--- a/frontend/assets/scss/components/recipe-display.component.scss
+++ b/frontend/assets/scss/components/recipe-display.component.scss
@@ -19,7 +19,6 @@
 
   &__description {
     display: block;
-    padding: $spacingXLarge;
     padding-top: 0;
   }
   &__categories {
